manifests/production/kubevirt-manager/v1_namespace_kubevirt-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: kubevirt-manager
    kubevirt-manager.io/version: nightly
  name: kubevirt-manager
