manifests/production/kubevirt-manager/kubevirt-manager_v1_service_kubevirt-manager.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubevirt-manager
    kubevirt-manager.io/version: nightly
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kubevirt-manager
  type: ClusterIP
