manifests/production/kubevirt-manager/kubevirt-manager_gateway.networking.k8s.io_v1_httproute_kubevirt-manager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  hostnames:
  - kubevirt-manager.seigra.net
  parentRefs:
  - kind: Gateway
    name: kubevirt-manager
    sectionName: kubevirt-manager
  rules:
  - backendRefs:
    - name: kubevirt-manager
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
